# esp-http-protocol-demo

./: .gitignore  CMakeLists.txt  partitions.csv  readme.md  sdkconfig  sdkconfig.old
certs/: cacert.pem  prvtkey.pem
main/: CMakeLists.txt  _1_http_client.c  _1_simple_get.c  _2_http_server.c  _2_simple_get_cb.c  _3_https_client.c  _3_simple_server.c  _4_https_server.c  _4_send_json.c  _5_https_chunked_client.c  _6_json_server_responce.c  _7_json_server_post.c  _8_json_client_post.c  connect.c  main copy.c.txt  main.c  web_demo.h
